@@ -129,6 +129,6 @@ subroutine allocate_phq
   CALL allocate_bec_type ( nkb, nbnd, becp )
 
   if (elph) allocate (el_ph_mat( nbnd, nbnd, nksq, 3*nat))
-  if (lraman) allocate ( ramtns (3, 3, 3, nat) )
+  allocate ( ramtns (3, 3, 3, nat) )
   return
 end subroutine allocate_phq
