@@ -53,7 +53,6 @@ SUBROUTINE openfil()
   ! ... for the direct-access file containing wavefunctions
   !
   nwordwfc = nbnd*npwx*npol
-
   !
   ! ... iunwfc=10: read/write wfc from/to file
   ! ... iunwfc=-1: copy wfc to/from RAM 
@@ -74,6 +73,12 @@ SUBROUTINE openfil()
         ! ... (directly in pw_readfile) using the internal format
         !
         CALL pw_readfile( 'wave', ierr )
+        !
+     ELSE
+        !
+        ! ... wavefunctions are read into memory
+        !
+        CALL init_buffer ( iunwfc, exst, ierr )
         !
      END IF
 
