@@ -493,7 +493,15 @@ SUBROUTINE setup()
      CALL find_sym ( nat, tau, ityp, dfftp%nr1, dfftp%nr2, dfftp%nr3, &
                   magnetic_sym, m_loc )
      !
-  ENDIF
+     ! ... Input k-points are assumed to be  given in the IBZ of the Bravais
+     ! ... lattice, with the full point symmetry of the lattice.
+     ! ... If some symmetries of the lattice are missing in the crystal,
+     ! ... "irreducible_BZ" computes the missing k-points.
+     !
+     IF ( .NOT. lbands ) CALL irreducible_BZ (nrot, s, nsym, time_reversal, &
+                            magnetic_sym, at, bg, npk, nkstot, xk, wk, t_rev)
+     !
+  END IF
   !
   ! ... if dynamics is done the system should have no symmetries
   ! ... (inversion symmetry alone is allowed)
@@ -502,26 +510,12 @@ SUBROUTINE setup()
            .AND. .NOT. ( calc == 'mm' .OR. calc == 'nm' ) ) &
        CALL infomsg( 'setup', 'Dynamics, you should have no symmetries' )
   !
-  IF ( nat > 0 ) THEN
-     !
-     ! ... Input k-points are assumed to be  given in the IBZ of the Bravais
-     ! ... lattice, with the full point symmetry of the lattice.
-     ! ... If some symmetries of the lattice are missing in the crystal,
-     ! ... "irreducible_BZ" computes the missing k-points.
-     !
-     CALL irreducible_BZ (nrot, s, nsym, time_reversal, at, bg, npk, &
-                          nkstot, xk, wk, t_rev)
-     !
-  END IF
-  !
   ntetra = 0
   !
   IF ( lbands ) THEN
      !
-     ! ... if calculating bands, we leave k-points unchanged and read the
-     ! Fermi energy
+     ! ... if calculating bands, we read the Fermi energy
      !
-     nkstot = nks_start
      CALL pw_readfile( 'reset', ierr )
      CALL pw_readfile( 'ef',   ierr )
      CALL errore( 'setup ', 'problem reading ef from file ' // &
@@ -614,15 +608,13 @@ SUBROUTINE setup()
         IF ( Hubbard_U(nt) /= 0.D0 .OR. Hubbard_alpha(nt) /= 0.D0 ) THEN
            !
            Hubbard_l(nt) = set_Hubbard_l( upf(nt)%psd )
-           !
            Hubbard_lmax = MAX( Hubbard_lmax, Hubbard_l(nt) )
            !
         END IF
         !
      END DO
      !
-     IF ( Hubbard_lmax == -1 ) &
-        CALL errore( 'setup', &
+     IF ( Hubbard_lmax == -1 ) CALL errore( 'setup', &
                    & 'lda_plus_u calculation but Hubbard_l not set', 1 )
      !
      ! compute index of atomic wfcs used as projectors
